# bigocrpdf

./: .gitignore  OCR_RESILIENCE_IMPROVEMENTS.md  README.md  default.nix  flake.nix  pyproject.toml  shell.nix  test_resilience.py
.serena/: project.yml
bigocrpdf/DEBIAN/: en.po  es.po  pt.po
bigocrpdf/locale/: bg.po  bigocrpdf.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh.po
bigocrpdf/usr/share/applications/: bigocrimage.desktop  bigocrpdf-open.desktop  bigocrpdf.desktop  br.com.biglinux.bigocrimage.desktop  br.com.biglinux.bigocrpdf.desktop
locale/: bg.po  bigocrpdf.pot  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  messages.mo  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  uk.po~  zh.po
pkgbuild/: PKGBUILD
src/bidi/: __init__.py  algorithm.py
src/bigocrpdf/: __init__.py  __main__.py  application.py  cli.py  config.py  constants.py  image_application.py  main.py  window.py  window_actions.py  window_processing.py  window_ui_setup.py
src/bigocrpdf/resources/: styles.css
src/bigocrpdf/services/: __init__.py  contour_analysis.py  contour_dewarp.py  contour_spans.py  export_service.py  file_queue.py  image_preprocessing.py  ocr_api.py  ocr_options_builder.py  output_config.py  pdf_operations.py  perspective_correction.py  perspective_document.py  perspective_margins.py  perspective_skew.py  preprocessing_config.py  processor.py  screen_capture.py  settings.py
src/bigocrpdf/services/rapidocr_service/: __init__.py  backend.py  backend_ocr.py  backend_pipeline.py  backend_text_layer.py  bilevel_analysis.py  bilevel_optimizer.py  config.py  dewarp_detection.py  dewarp_probmap.py  discovery.py  engine.py  extractor.py  jbig2_encoder.py  ocr_postprocess.py  ocr_worker.py  page_worker.py  pdf_assembly.py  pdf_extractor.py  pipeline_chunked_ocr.py  pipeline_mixed_content.py  preprocessor.py  (+6 more)
src/bigocrpdf/ui/: __init__.py  advanced_dialog.py  base_view.py  components.py  conclusion_export_mixin.py  conclusion_page.py  conclusion_page_builder.py  conclusion_ui_mixin.py  corrections_dialog.py  dialogs_manager.py  export_dialog.py  file_save_mixin.py  file_selection_manager.py  header_bar.py  image_ocr_window.py  navigation_manager.py  output_dialog.py  pdf_options_callbacks_mixin.py  pdf_options_ui_mixin.py  screen_capture_dialog.py  settings_page.py  settings_queue_mixin.py  settings_sidebar_mixin.py  terminal_page.py  text_viewer_mixin.py  ui_manager.py  widgets.py
src/bigocrpdf/utils/: __init__.py  a11y.py  checkpoint_manager.py  column_detector.py  comparison.py  config_manager.py  exceptions.py  format_utils.py  history_manager.py  i18n.py  layout_analyzer.py  logger.py  odf_builder.py  odf_exporter.py  odf_frame_mixin.py  odf_simple_mixin.py  odf_style_mixin.py  odf_text_mixin.py  odf_types.py  pdf_utils.py  progress_state.py  python_compat.py  signal_manager.py  spread_detector.py  temp_manager.py  text_utils.py  timer.py  tooltip_helper.py  tsv_odf_converter.py  tsv_parser.py  visual_analyzer.py
tests/: __init__.py  conftest.py  run_odf_tests.sh  test_backend_modifications.py  test_bilevel_analysis.py  test_bilevel_optimizer.py  test_checkpoint_manager.py  test_cli_parsing.py  test_config_manager.py  test_editor_logic.py  test_error_handling.py  test_export_service.py  test_file_queue.py  test_format_utils.py  test_history_manager.py  test_image_position_matching.py  test_jbig2_encoder.py  test_markdown_export.py  test_odf_comparison.py  test_odf_export.py  test_page_model.py  test_pdf_assembly.py  test_pdf_operations.py  test_pdf_utils.py  test_perspective_correction.py  test_perspective_geometry.py  test_preprocessing.py  test_resource_manager.py  test_rotation.py  test_screen_capture.py  test_settings_validation.py  test_spread_detector.py  test_state_restoration.py  test_text_utils.py  test_thread_safety.py
usr/share/applications/: br.com.biglinux.bigocrimage.desktop  br.com.biglinux.bigocrpdf-editor.desktop
(+114 files in other folders)
